[package]
name = "getToken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
actix-session = "0.5"
dotenv = "0.15.0" 
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
